 explicitely.
 See also:
  http://en.wikipedia.org/wiki/FASTQ_format
  http://maq.sourceforge.net/fastq.shtml
  http://last.cbrc.jp/last/doc/last-manual.txt (look for FASTQ-SANGER)
 
 Changes to the Compact format:
 - Store target/reference sequence lengths in the alignment header. This information is helpful when calculating
   statistics such as RPKMs (transcript-level searches).

1.4.1
 - Added a mode to write a read set to text format (set-to-text). The output will show the
   multiplicity of each query index.  ReadSets can be efficiently created with tally-reads
   as before.

1.4
 - Last aligner (http://last.cbrc.jp/) is now supported "out of the box".  Tested against
   version last-96.  Support for the enhanced version "lastag" still exists.
 - Alignment-to-annotation-counts mode now computes a p-value using R (if available on the host)
 - Update to protobuf 2.3.0 (http://code.google.com/p/protobuf/)
 - Default extension for files written in Wiggle Track Format is now ".wig" for easier
   integration with the Integrative Genomics Viewer (http://www.broadinstitute.org/igv/).
   Similarly, the default extension for BedGraph Track Format files is now ".bed".

1.3
 - New "counts-to-bedgraph" mode which is similar to "counts-to-wiggle" but writes the
   data in "bedgraph" format, which is another format the Genome Browser accepts.
 - New mode "version" to write the jar's version number to stdout

 counts-to-wiggle mode:
  - Write at most one entry per resolution-sized window of data (averaging the data in that window)
  - Not write data past the end of the size of the chromosome (which is possible with resolution > 1)

 compact-alignment-to-annotation-counts mode:
 - Fixed problem with BH FDR adjustment caused by NaN p-values.
 - ChiSquare test p-values are now correctly reported.
 - Adjusted P-values (Bonferroni and BH) are set to 1.0 if they would be larger than 1.
 - Added magnitude of fold change to group comparison tsv output.

1.2