@@ -162,18 +162,20 @@ message AlignmentHeader {
    */
    optional uint32 number_of_aligned_reads=7;
 
-   /* Length of the query sequences. One number per query, in the order of increasing query index.
+   /*
+      Length of the query sequences. One number per query, in the order of increasing query index.
     */
    repeated uint32 query_length=3;
+   /*
+      If query length is constant across all the queries, this field contains the constant length. \
+      In such cases, query_length will be empty.
+   */
+   optional uint32 constantQueryLength=10;
 
    /* Length of the target sequences. One number per target, in the order of increasing target index.
     */
    repeated uint32 target_length=8;
-   /**
-     When this attribute is true, sequence variations are provided in the color space alphabet and need to
-     be decoded to base space. This operation requires a reference sequence.
-    */
-   require bool variations_in_color_space=10;
+  
 }
 
 message IdentifierMapping {
